# django-bootstrap

./: .travis.yml  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: conf.py  index.rst  requirements.txt
example/: requirements.txt  settings.py
example/app/: charts.py
example/app/templates/: home.html
src/django_bootstrap/: __init__.py  bootstrap.py  components.py  css.py  forms.py  html.py  renderers.py  settings.py  templates.py  text.py  utils.py  widgets.py
src/django_bootstrap/templates/bootstrap4/: messages.html  pagination.html
src/django_bootstrap/templates/django_bootstrap/bootstrap4/forms/: field.html  form.html  form_set.html  non_field_errors.html
src/django_bootstrap/templates/django_bootstrap/bootstrap4/forms/widgets/: checkbox.html  checkbox_option.html  checkbox_select.html  clearable_file_input.html  input.html  multiple_hidden.html  multiple_input.html  multiwidget.html  radio_option.html  select.html  select_option.html  textarea.html
src/django_bootstrap/templatetags/: django_bootstrap.py
tests/: compat.py  test_bootstrap_field.py  test_bootstrap_form.py  test_bootstrap_setting.py  test_css.py  test_template_tags.py  test_version.py  test_widget_email_input.py  test_widget_hidden_input.py  test_widget_multiple_hidden.py  test_widget_number_input.py  test_widget_password_input.py  test_widget_radio_select.py  test_widget_select.py  test_widget_text_input.py  test_widget_url_input.py  test_xss.py
tests/app/: forms.py  settings.py  urls.py  views.py
tests/app/templates/: base.html  form.html  home.html
