[tool.poetry]
name = "django-bootstrap"
version = "1.0.0-alpha.0"
description = "Bootstrap for Django"
authors = ["Dylan Verheul <dylan@zostera.nl>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/zostera/django-bootstrap"
repository = "https://github.com/zostera-django-bootstrap"
keywords = ["django", "bootstrap"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Environment :: Web Environment",
    "Framework :: Django",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.4"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
