[tool.poetry]
name = "django-bootstrap"
version = "1.0.0-alpha.0"
description = "Bootstrap for Django"
homepage = "https://github.com/zostera/django-bootstrap"
repository = "https://github.com/zostera-django-bootstrap"
authors = ["Dylan Verheul <dylan@zostera.nl>"]
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["django", "bootstrap"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Framework :: Django :: 3.0",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Utilities",
]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^2.2 || ^3.0"
importlib-metadata = { version = "^1.5.0", python = "<3.8", optional = true }

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
docformatter = "^1.3.1"
pydocstyle = "^5.0.2"
sphinx = "^2.4.4"
sphinx_rtd_theme = "^0.4.3"
coverage = {extras = ["toml"], version = "^5.0.4"}
coveralls = "^2.0.0"

[tool.black]
line-length = 120
target-version = ["py36"]

[tool.coverage.run]
source = ["src/django_bootstrap"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

